--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,61 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html,
+body,
+#__next {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  margin: 0;
+}
+
+html,
+body {
+  overflow-x: hidden;
+}
+
+body {
+  overflow-x: auto;
+  overflow-y: hidden;
+}
+
+body.light-mode {
+  @apply bg-neutral-50 text-neutral-600;
+  transition: background-color 0.3s ease;
+}
+body.dark-mode {
+  @apply bg-neutral-900 text-neutral-300;
+}
+
+.app {
+  display: flex;
+  flex: 1;
+  flex-direction: row;
+  font-family: sans-serif;
+  text-align: center;
+  align-items: flex-end;
+  justify-content: center;
+}
+
+.wrap {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  height: 640px;
+}
+
+.tab {
+  @apply rounded-xl shadow-xl;
+  width: 320px;
+  height: 100%;
+  overflow: hidden;
+}
+
+.frame {
+  border: none !important;
+  height: 100% !important;
+  width: 100% !important;
+}
