--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,8 @@
 
 html,
 body,
-#__next {
+#__next,
+#__next > div {
   display: flex;
   width: 100%;
   height: 100%;
@@ -26,8 +27,14 @@ body.light-mode {
   @apply bg-neutral-50 text-neutral-600;
   transition: background-color 0.3s ease;
 }
+body.light-mode .dark-bg {
+  @apply bg-neutral-800 bg-opacity-30;
+}
 body.dark-mode {
   @apply bg-neutral-900 text-neutral-300;
+}
+body.dark-mode .dark-bg {
+  @apply bg-neutral-200 bg-opacity-30;
 }
 
 .app {
